# Bezier

./: .gitignore  CMakeLists.txt  README  notes
data/: spoon.bez  teacup.bez  teapot.bez  test.bez
lib/: CMakeLists.txt
src/: BezierPatch.cpp  BezierPatch.h  CMakeLists.txt  CommandLineParser.h  FileParser.h  Parser.h  Subdivide.h  gen_file.cpp  tut1.cpp
src/tests/: dispApp.cpp  testParser.cpp  testRender.cpp
